--- a/templates/python.yaml
+++ b/templates/python.yaml
@@ -2,48 +2,47 @@
 # All namespaces unshared by default
 # Use share: to selectively allow namespaces
 
-models:
-  base:
-    share:
-      - user       # Share user namespace with host
-    ro_bind:
-      - /usr
-      - /lib
-      - /lib64
+base:
+  type: model
+  share:
+    - user       # Share user namespace with host
+  ro_bind:
+    - /usr
+    - /lib
+    - /lib64
 
-commands:
-  python:
-    enabled: true
-    extends: base
-    bind:
-      - ~/.python_history:~/.python_history
-      - ~/.local:~/.local
-      - $PWD:/workspace
+python:
+  enabled: true
+  extends: base
+  bind:
+    - ~/.python_history:~/.python_history
+    - ~/.local:~/.local
+    - $PWD:/workspace
 
-  python3:
-    enabled: true
-    extends: base
-    bind:
-      - ~/.python_history:~/.python_history
-      - ~/.local:~/.local
-      - $PWD:/workspace
+python3:
+  enabled: true
+  extends: base
+  bind:
+    - ~/.python_history:~/.python_history
+    - ~/.local:~/.local
+    - $PWD:/workspace
 
-  pip:
-    enabled: true
-    extends: base
-    share:
-      - network    # pip needs network for package downloads
-    bind:
-      - ~/.cache/pip:~/.cache/pip
-      - ~/.local:~/.local
-      - $PWD:/workspace
+pip:
+  enabled: true
+  extends: base
+  share:
+    - network    # pip needs network for package downloads
+  bind:
+    - ~/.cache/pip:~/.cache/pip
+    - ~/.local:~/.local
+    - $PWD:/workspace
 
-  pip3:
-    enabled: true
-    extends: base
-    share:
-      - network    # pip3 needs network for package downloads
-    bind:
-      - ~/.cache/pip:~/.cache/pip
-      - ~/.local:~/.local
-      - $PWD:/workspace
+pip3:
+  enabled: true
+  extends: base
+  share:
+    - network    # pip3 needs network for package downloads
+  bind:
+    - ~/.cache/pip:~/.cache/pip
+    - ~/.local:~/.local
+    - $PWD:/workspace
