Use tuples instead of `x:x` syntax

--- a/examples/default.yaml
+++ b/examples/default.yaml
@@ -20,5 +20,5 @@
 #   share:
 #     - network     # Allow network access
 #   bind:
-#     - ~/.npm:~/.npm
-#     - $PWD:/workspace
+#     - [~/.npm, ~/.npm]
+#     - [$PWD, /workspace]
