Vocabulary change: includes instead of extends

--- a/examples/default.yaml
+++ b/examples/default.yaml
@@ -16,7 +16,7 @@
 # Example command configuration
 # npm:
 #   enabled: true
-#   extends: base
+#   includes: base
 #   share:
 #     - network     # Allow network access
 #   bind:
