--- a/examples/go.yaml
+++ b/examples/go.yaml
@@ -13,7 +13,7 @@ base:
 
 go:
   enabled: true
-  extends: base
+  includes: base
   share:
     - network    # go needs network for module downloads
   bind:
